<resources>
    <string name="app_name">Mail Test</string>
    <string name="test1">テスト1</string>
    <string name="test2">テスト2</string>
    <string name="button_send">Send</string>
    <string name="subject">Subject</string>
    <string name="radio_button_group">RadioButtonGroup</string>
    <string name="radio_button1">RadioButton1</string>
    <string name="radio_button2">RadioButton2</string>
    <string name="radio_button3">RadioButton3</string>
    <string name="mail_to">okwrtdsh@gmail.com</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test1">Test1Activity</string>
    <string name="title_activity_test2">Test2Activity</string>
</resources>
